--- a/src/styles/shared/FixedNavbar.scss
+++ b/src/styles/shared/FixedNavbar.scss
@@ -11,6 +11,7 @@ $xl-devices: 75em;  /* Extra large devices (large laptops and desktops, 1200px a
   width: 100vw;
   height: 12vh;
   position: fixed;
+  z-index: 2;
   top:0;
   left: 0;
   background: white;
@@ -38,8 +39,7 @@ $xl-devices: 75em;  /* Extra large devices (large laptops and desktops, 1200px a
     width: 26px;
     height: 16px;
     position: relative;
-    z-index: 2;
-    //margin-right: 3%;
+    z-index: 3;
   
     i{
       transition: $hamburger-speed;
@@ -65,7 +65,7 @@ $xl-devices: 75em;  /* Extra large devices (large laptops and desktops, 1200px a
     width: 80vw;
     height: 100vh;
     transition: right $hamburger-speed;
-    z-index: 1;
+    z-index: 2;
     display: grid;
     grid-template-columns: repeat(9, 1fr);
     grid-template-rows: repeat(12, 1fr);
